--- a/.github/workflows/flutter-web-build.yml
+++ b/.github/workflows/flutter-web-build.yml
@@ -21,8 +21,10 @@ jobs:
     - name: Install Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.13.0'
 
+    - name: Clean Flutter Cache
+      run: flutter clean
     # 3. Validasi Flutter dan Instal Dependency
     - name: Flutter dependencies
       run: flutter pub get
@@ -30,7 +32,7 @@ jobs:
     # 4. Build Aplikasi Web
     - name: Build Flutter Web
       run: flutter build web --release
-
+      
     # 5. Upload Build Output ke Artifacts
     - name: Upload Web Build
       uses: actions/upload-artifact@v3
